[package]
name = "iperfp"
version = "0.1.0"
authors = ["iake123 <iake123@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.4", features = ["unstable"]}

serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0.60"

clap = "2.31.2"

log = "0.4.8"
log4rs = "0.8.3"